--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Your Website Title</title>
+<title>您的网站标题</title>
 <style>
     body {
         margin: 0;
@@ -16,9 +16,12 @@
     }
     .menu {
         flex: 1;
-        background-color: #333;
+        max-width: 200px; /* Set maximum width for the menu */
+        background-image: url('pictures/main_bkg.png'); /* Background image for menu */
+        background-size: cover;
         color: white;
         padding: 20px;
+        border-right: 2px solid white; /* Add border to the right side */
     }
     .menu a {
         color: white;
@@ -29,6 +32,24 @@
     .content {
         flex: 3;
         padding: 20px;
+        background-image: url('pictures/main_bkg.png'); /* Background image for main content */
+        background-size: cover;
+        color: white;
+    }
+    /* Mobile Menu Styles */
+    .mobile-menu {
+        display: none;
+    }
+    @media only screen and (max-width: 600px) {
+        .menu {
+            display: none;
+        }
+        .mobile-menu {
+            display: block;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+        }
     }
 </style>
 </head>
@@ -36,19 +57,47 @@
 
 <div class="container">
     <div class="menu">
-        <h2>Menu</h2>
+        <h2>菜单</h2>
         <ul>
-            <li><a href="introduction.html">Introduction</a></li>
-            <li><a href="abstract.html">Abstract</a></li>
-            <li><a href="pictures.html">Photos</a></li>
+            <li><a href="index.html">介绍</a></li>
+            <li><a href="picture.html">摘要</a></li>
+            <li><a href="password.html">照片</a></li>
         </ul>
     </div>
     <div class="content">
         <!-- Your main content goes here -->
-        <h1>Welcome to My Website</h1>
-        <p>This is the main content area. You can add your text, images, and other elements here.</p>
+        <h1>欢迎来到我的网站</h1>
+        <p>这里是主要内容区域。您可以在这里添加您的文本、图片和其他元素。</p>
+
+	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
+	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
+	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
+
+
+	
+    </div>
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+        <h2>菜单</h2>
+        <button onclick="toggleMenu()">☰</button>
+        <ul id="mobileMenu">
+            <li><a href="index.html">介绍</a></li>
+           <li><a href="picture.html">摘要</a></li>
+            <li><a href="password.html">照片</a></li>
+        </ul>
     </div>
 </div>
+
+<script>
+    function toggleMenu() {
+        var mobileMenu = document.getElementById("mobileMenu");
+        if (mobileMenu.style.display === "block") {
+            mobileMenu.style.display = "none";
+        } else {
+            mobileMenu.style.display = "block";
+        }
+    }
+</script>
 
 </body>
 </html>
