--- a/password.html
+++ b/password.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pictures Page</title>
+    <title>Password Protected Page</title>
 </head>
 <body>
-
-<h1>Pictures Page</h1>
-
-<!-- Password Form -->
-<form action="authenticate.php" method="POST">
-    <label for="password">請輸入密碼:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">提交</button>
-</form>
-
-
-
+    <h2>Password Protected Page</h2>
+    <form action="login.php" method="post">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br>
+        <input type="submit" value="Login">
+    </form>
 </body>
 </html>
