--- a/password.html
+++ b/password.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Protected Page</title>
-</head>
-<body>
-    <h2>Password Protected Page</h2>
-    <form action="login.php" method="post">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-        <input type="submit" value="Login">
-    </form>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=webB.html">
