--- a/picturesecret.html
+++ b/picturesecret.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +61,7 @@
         <ul>
             <li><a href="index.html">介绍</a></li>
             <li><a href="picture.html">摘要</a></li>
-            <li><a href="password.html">照片</a></li>
+            <li><a href="picturesecret.html">照片</a></li>
         </ul>
     </div>
     <div class="content">
@@ -83,7 +83,7 @@
         <ul id="mobileMenu">
             <li><a href="index.html">介绍</a></li>
            <li><a href="picture.html">摘要</a></li>
-            <li><a href="password.html">照片</a></li>
+            <li><a href="picturesecret.html">照片</a></li>
         </ul>
     </div>
 </div>
