--- a/password.html
+++ b/password.html
@@ -1,1 +1,30 @@
-<meta http-equiv="refresh" content="0; url=picturesecret.html">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Access Page</title>
+    <script src="password.js"></script>
+</head>
+<body>
+    <script>
+        // Function to prompt for password
+        function promptForPassword() {
+            // Prompt for password
+            var enteredPassword = prompt("Please enter the password:");
+
+            // Validate password
+            if (enteredPassword === password) {
+                // If password is correct, redirect to webB.html
+                window.location.href = "picturesecret.html";
+            } else {
+                // If password is incorrect, show an alert and stay on the same page
+                alert("Incorrect password. Please try again.");
+            }
+        }
+
+        // Call the function when the page loads
+        window.onload = promptForPassword;
+    </script>
+</body>
+</html>
