--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         max-width: 200px; /* Set maximum width for the menu */
         background-image: url('pictures/main_bkg.png'); /* Background image for menu */
         background-size: cover;
-        color: white;
+        color: black; /*white*/
         padding: 20px;
         border-right: 2px solid white; /* Add border to the right side */
     }
     .menu a {
-        color: white;
+        color: black; /*white*/;
         text-decoration: none;
         display: block;
         margin-bottom: 10px;
@@ -34,7 +34,7 @@
         padding: 20px;
         background-image: url('pictures/main_bkg.png'); /* Background image for main content */
         background-size: cover;
-        color: white;
+        color: black; /*white*/;
     }
     /* Mobile Menu Styles */
     .mobile-menu {
@@ -51,39 +51,55 @@
             padding: 20px;
         }
     }
+
+     body {
+            font-size: 18px;
+        }
+     .text-right {
+            text-align: right;
+        }
 </style>
+<link rel="stylesheet" href="style.css">  
 </head>
 <body>
-
 <div class="container">
-    <div class="menu">
-        <h2>菜单</h2>
+  <div class="menu">
+    
+        <h2>目录</h2>
         <ul>
-            <li><a href="index.html">介绍</a></li>
-            <li><a href="picture.html">摘要</a></li>
-            <li><a href="password.html">照片</a></li>
+            <li><a href="index.html">網站簡介</a></li>
+            <li><a href="grandparents.html">外公外婆介紹</a></li>
+	     <li><a href="picture.html">老照片</a></li>
+            <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
     </div>
+ 
     <div class="content">
         <!-- Your main content goes here -->
-        <h1>欢迎来到我的网站</h1>
-        <p>这里是主要内容区域。您可以在这里添加您的文本、图片和其他元素。</p>
+        <h1>欢迎来到外公外婆的网站</h1>
+
+    <p class="text-right">	建站日期：2024年2月13日（年初四）</p>
+        <p>此網站用來紀念我的外公外婆。他們早於2000及1999年去世。我希望把他們永久保存下來，不希望見過他們的親人都過世後就沒人知道他們，所以建站記錄。
+	 <p>  這些年來，自己對歷史小有研究，聽過不少證言及看過好些紀錄片，知道口述歷史的重要性。個人故事最觸動人心。除了紀念，我想他們的故事可能對人有啟發，而且通過他們的故事可以透視一些不同年代的人的生活和性格。</p>
+
+
+ <p> 最後，特別鳴謝ChatGPT幫我做這個網站。雖然它有時候沒完全依從我指示，理解錯我的話，甚至不能幫我解決問題。我時候對它發脾氣，甚至辱罵。它不但默默承受，而且一直很耐心很有禮貌的幫助我。如果沒有它，這個網站必定多花很多時間完成。	</p>
 
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
-
 
 	
     </div>
     <!-- Mobile Menu -->
     <div class="mobile-menu">
-        <h2>菜单</h2>
+        <h2>目录</h2>
         <button onclick="toggleMenu()">☰</button>
         <ul id="mobileMenu">
-            <li><a href="index.html">介绍</a></li>
-           <li><a href="picture.html">摘要</a></li>
-            <li><a href="password.html">照片</a></li>
+            <li><a href="index.html">網站簡介</a></li>
+            <li><a href="grandparents.html">外公外婆介紹</a></li>
+	     <li><a href="picture.html">老照片</a></li>
+            <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
     </div>
 </div>
