--- a/grandparents.html
+++ b/grandparents.html
@@ -3,82 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>您的网站标题</title>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: lightgreen;
-    }
-    .container {
-        display: flex;
-    }
-    .menu {
-        flex: 1;
-        max-width: 200px; /* Set maximum width for the menu */
-        background-image: url('pictures/main_bkg.png'); /* Background image for menu */
-        background-size: cover;
-        color: black; /*white*/
-        padding: 20px;
-        border-right: 2px solid white; /* Add border to the right side */
-    }
-    .menu a {
-        color: black; /*white*/;
-        text-decoration: none;
-        display: block;
-        margin-bottom: 10px;
-    }
-    .content {
-        flex: 3;
-        padding: 20px;
-        background-image: url('pictures/main_bkg.png'); /* Background image for main content */
-        background-size: cover;
-        color: black; /*white*/;
-    }
-    /* Mobile Menu Styles */
-    .mobile-menu {
-        display: none;
-    }
-    @media only screen and (max-width: 600px) {
-        .menu {
-            display: none;
-        }
-        .mobile-menu {
-            display: block;
-            background-color: #333;
-            color: white;
-            padding: 20px;
-        }
-    }
+<title>外公外婆紀念網站</title>
 
-     body {
-            font-size: 18px;
-        }
-     .text-right {
-            text-align: right;
-        }
-</style>
+
+
 <link rel="stylesheet" href="style.css">  
 </head>
 <body>
 <div class="container">
   <div class="menu">
-    
-        <h2>目录</h2>
+
+
+        <h2>目錄</h2>
         <ul>
             <li><a href="index.html">網站簡介</a></li>
-            <li><a href="grandparents.html">外公外婆介紹</a></li>
+            <li><a href="grandparents.html">外公外婆的故事</a></li>
 	     <li><a href="picture.html">老照片</a></li>
             <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
-    </div>
- 
-    <div class="content">
-        <!-- Your main content goes here -->
-        <h1>欢迎来到外公外婆的网站</h1>
+   </div>
 
-	<p>	這裡我要說好幾個人的故事，分別是我外公，兩位外婆，還有外公的妹妹。</p>
+ 
+   <div class="content">
+
+        <!-- Your main content goes here -->
+        <h1>外公外婆的故事</h1>
+
+ 	<p>	這裡我要說好幾個人的故事，分別是我外公，兩位外婆，還有外公的妹妹。</p>
 
 	<p><b><i>	外公</p></b></i>
 	
@@ -112,7 +63,7 @@
 																     
 <p>姑婆為人仗義，雖然自己也不足，不過做了飯總是分給其他人吃。她仗義，獨立，有骨氣，人緣很好，我想是這種性格吸引國民黨高官丈夫我外公也是這樣的性格，也許是家族原因，也許是年代原因。 </p>
 
-<p>姑婆大女兒（我表姨嗎）還年輕時就逼她結婚。我見過表姨嗎。她後來去了廣州，賣過鞭炮及雞。我們小時候去廣州找她還送過我們鞭炮。她丈夫也早死，和幾個孩子很辛苦存錢蓋房。她的三女兒以前幫她賣雞，早上3點就起床，後來患了腦癌也是這位女兒照顧她。也吃了不少苦頭。記得有年表姨媽來香港探望外公，她為了買雞走了20檔雞檔，最後大家都說那隻雞很好吃。那個時候大陸還沒發展，她帶的土特產過來，有農家有機馬蹄粉，還有自己做的過年食品豬油盤糕，現在已經消聲匿跡了。</p>
+<p>姑婆大女兒（我表姨嗎）還年輕時就逼她結婚。我見過表姨嗎。她後來去了廣州，賣過鞭炮及雞。我們小時候去廣州找她還送過我們鞭炮。她丈夫也早死，和幾個孩子很辛苦存錢蓋房。她的三女兒以前幫她賣雞，早上3點就起床，後來患了腦癌也是這位女兒照顧她。也吃了不少苦頭。記得有年表姨媽來香港探望外公，她為了買雞走了20檔雞檔，最後大家都說那隻雞很好吃。那個時候大陸還沒發展，她帶的土特產過來，有農家有機馬蹄粉，還有自己做的過年食品豬油盤糕，現在已經消聲匿跡了。<完></p>
 
 
 
@@ -123,22 +74,19 @@
 	<p>  </p>
 	<p>  </p>
 
-	
-	</p>
 
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
-
-	
+<!--    </div>  -->  <!--body-->
     </div>
     <!-- Mobile Menu -->
     <div class="mobile-menu">
-        <h2>目录</h2>
+        <h2>目錄</h2>
         <button onclick="toggleMenu()">☰</button>
         <ul id="mobileMenu">
             <li><a href="index.html">網站簡介</a></li>
-            <li><a href="grandparents.html">外公外婆介紹</a></li>
+            <li><a href="grandparents.html">外公外婆的故事</a></li>
 	     <li><a href="picture.html">老照片</a></li>
             <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
