--- a/index.html
+++ b/index.html
@@ -3,97 +3,47 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>您的网站标题</title>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: lightgreen;
-    }
-    .container {
-        display: flex;
-    }
-    .menu {
-        flex: 1;
-        max-width: 200px; /* Set maximum width for the menu */
-        background-image: url('pictures/main_bkg.png'); /* Background image for menu */
-        background-size: cover;
-        color: black; /*white*/
-        padding: 20px;
-        border-right: 2px solid white; /* Add border to the right side */
-    }
-    .menu a {
-        color: black; /*white*/;
-        text-decoration: none;
-        display: block;
-        margin-bottom: 10px;
-    }
-    .content {
-        flex: 3;
-        padding: 20px;
-        background-image: url('pictures/main_bkg.png'); /* Background image for main content */
-        background-size: cover;
-        color: black; /*white*/;
-    }
-    /* Mobile Menu Styles */
-    .mobile-menu {
-        display: none;
-    }
-    @media only screen and (max-width: 600px) {
-        .menu {
-            display: none;
-        }
-        .mobile-menu {
-            display: block;
-            background-color: #333;
-            color: white;
-            padding: 20px;
-        }
-    }
+<title>外公外婆紀念網站</title>
 
-     body {
-            font-size: 18px;
-        }
-     .text-right {
-            text-align: right;
-        }
-</style>
+
+
 <link rel="stylesheet" href="style.css">  
 </head>
 <body>
 <div class="container">
   <div class="menu">
-    
-        <h2>目录</h2>
+
+
+        <h2>目錄</h2>
         <ul>
             <li><a href="index.html">網站簡介</a></li>
             <li><a href="grandparents.html">外公外婆介紹</a></li>
 	     <li><a href="picture.html">老照片</a></li>
             <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
-    </div>
+   </div>
+
  
-    <div class="content">
+   <div class="content">
+
         <!-- Your main content goes here -->
         <h1>欢迎来到外公外婆的网站</h1>
 
     <p class="text-right">	建站日期：2024年2月13日（年初四）</p>
         <p>此網站用來紀念我的外公外婆。他們早於2000及1999年去世。我希望把他們永久保存下來，不希望見過他們的親人都過世後就沒人知道他們，所以建站記錄。
-	 <p>  這些年來，自己對歷史小有研究，聽過不少證言及看過好些紀錄片，知道口述歷史的重要性。個人故事最觸動人心。除了紀念，我想他們的故事可能對人有啟發，而且通過他們的故事可以透視一些不同年代的人的生活和性格。</p>
+	 <p>  這些年來，自己對歷史小有研究，聽過不少證言及看過好些紀錄片，知道口述歷史的重要性，明白個人故事最觸動人心。最近從親戚口裏知道一些外公外婆及其他人的歷史，自己現在也是拿了牌照的“民間歷史學家，所以現在是時候記錄他們了。”除了紀念，我想他們的故事可能對人有啟發，而且通過他們的故事可以透視一些不同年代的人的生活和性格。做這個網站令我明白到，如果你沒有愛留下，沒人會記得你的。</p>
 
 
- <p> 最後，特別鳴謝ChatGPT幫我做這個網站。雖然它有時候沒完全依從我指示，理解錯我的話，甚至不能幫我解決問題。我時候對它發脾氣，甚至辱罵。它不但默默承受，而且一直很耐心很有禮貌的幫助我。如果沒有它，這個網站必定多花很多時間完成。	</p>
+ <p> 最後，特別鳴謝ChatGPT幫我做這個網站。雖然有時候它的表現未如理想，導致我對它辱罵。它不但默默承受，而且一直很耐心很有禮貌的幫助我。如果沒有它，這個網站必定多花很多時間完成。	</p>
 
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
-
-	
+<!--    </div>  -->  <!--body-->
     </div>
     <!-- Mobile Menu -->
     <div class="mobile-menu">
-        <h2>目录</h2>
+        <h2>目錄</h2>
         <button onclick="toggleMenu()">☰</button>
         <ul id="mobileMenu">
             <li><a href="index.html">網站簡介</a></li>
