--- a/password.html
+++ b/password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Page</title>
-    <script src="https://poonh.github.io/waigongwaipo/password.js"></script>
+    <script src="password.js"></script>
 </head>
 <body>
     <script>
