--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 
-<link rel="stylesheet" href="style.css">  
+<link rel="stylesheet" href="styletest.css">  
 </head>
 <body>
 <div class="container">
@@ -17,7 +17,7 @@
         <h2>目錄</h2>
         <ul>
             <li><a href="index.html">網站簡介</a></li>
-            <li><a href="grandparents.html">外公外婆介紹</a></li>
+            <li><a href="grandparents.html">外公外婆的故事</a></li>
 	     <li><a href="picture.html">老照片</a></li>
             <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
@@ -27,14 +27,16 @@
    <div class="content">
 
         <!-- Your main content goes here -->
-        <h1>欢迎来到外公外婆的网站</h1>
+        <h1>歡迎來到外公外婆的網站</h1>
 
     <p class="text-right">	建站日期：2024年2月13日（年初四）</p>
         <p>此網站用來紀念我的外公外婆。他們早於2000及1999年去世。我希望把他們永久保存下來，不希望見過他們的親人都過世後就沒人知道他們，所以建站記錄。
 	 <p>  這些年來，自己對歷史小有研究，聽過不少證言及看過好些紀錄片，知道口述歷史的重要性，明白個人故事最觸動人心。最近從親戚口裏知道一些外公外婆及其他人的歷史，自己現在也是拿了牌照的“民間歷史學家，所以現在是時候記錄他們了。”除了紀念，我想他們的故事可能對人有啟發，而且通過他們的故事可以透視一些不同年代的人的生活和性格。做這個網站令我明白到，如果你沒有愛留下，沒人會記得你的。</p>
 
 
- <p> 最後，特別鳴謝ChatGPT幫我做這個網站。雖然有時候它的表現未如理想，導致我對它辱罵。它不但默默承受，而且一直很耐心很有禮貌的幫助我。如果沒有它，這個網站必定多花很多時間完成。	</p>
+	<p> 最後，特別鳴謝ChatGPT幫我做這個網站。雖然有時候它的表現未如理想，導致我對它辱罵。它不但默默承受，而且一直很耐心很有禮貌的幫助我。如果沒有它，這個網站必定多花很多時間完成。另外，我發現Safari對網頁製作也很有幫助。今次項目我學習了一些網站製作知識。
+
+	</p>
 
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
 	</br></br></br>	</br></br></br>	</br></br></br>	</br></br></br>
@@ -47,7 +49,7 @@
         <button onclick="toggleMenu()">☰</button>
         <ul id="mobileMenu">
             <li><a href="index.html">網站簡介</a></li>
-            <li><a href="grandparents.html">外公外婆介紹</a></li>
+            <li><a href="grandparents.html">外公外婆的故事</a></li>
 	     <li><a href="picture.html">老照片</a></li>
             <li><a href="password.html">老照片(要密碼)</a></li>
         </ul>
