--- a/picture.html
+++ b/picture.html
@@ -49,7 +49,7 @@
               <a href="pictures/grandma_he.jpg" target="_blank">
 		<img src="pictures/grandma_he.jpg" alt="Image 1" "></a>
             </div>
-            <div class="description">何金外婆</div>
+            <div class="description">何金外婆c</div>
         </div>
         <div class="column">
             <div class="image">
@@ -70,7 +70,7 @@
         </div>
         <div class="column">
             <div class="image">
-              <a href="pictures/with_son_1958_副本jpg" target="_blank">
+              <a href="pictures/with_son_1958_副本.jpg" target="_blank">
 		<img src="pictures/with_son_1958_副本.jpg" alt="Image 1" "></a>
             </div>
             <div class="description">外公和子女（40多歲，攝於五六十年代）</div>
