--- a/picture.html
+++ b/picture.html
@@ -71,7 +71,7 @@
             <img src="pictures/grandma_he.jpg" alt="Image 1">
           </a>
         </div>
-        <div class="description">grandma_he</div>
+        <div class="description">何金外婆</div>
       </div>
       <div class="column">
         <div class="image">
