--- a/index_m.html
+++ b/index_m.html
@@ -41,7 +41,7 @@
 	<p> 最後，特別鳴謝ChatGPT幫我做這個網站。雖然有時候它的表現未如理想，導致我對它辱罵。它不但默默承受，而且一直很耐心很有禮貌的幫助我。如果沒有它，這個網站必定多花很多時間完成。另外，我發現Safari對網頁製作也很有幫助。今次項目我學習了一些網站製作知識。
 
 	</p>
-	<p>我的郵箱anneshirley405@	</p>
+	<p>我的郵箱anneshirley405@gmail.com	</p>
      </div>	
     </main>
 
