--- a/index_m.html
+++ b/index_m.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>外公外婆紀念網站</title>
     <link rel="stylesheet" type="text/css" href="style_m.css">
+    <link rel="stylesheet" type="text/css" href="2f422.css">
 </head>
+
+<nav class="navigation mobile-only clearfix mobile-menu-wrapper">
+<ul id="menu-menulayout-1" class="menu clearfix"><li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-31314">
+  <li id="menu-item-31314" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-31314"><a href="https://poonh.github.io/kr_saijo/">主页</a></li>
+
 <body>
     <header>
         <div class="container">
@@ -17,6 +23,19 @@
 	           <li><a href="picture.html">老照片</a></li>
                 </ul>
             </nav>
+
+
+<nav class="navigation mobile-only clearfix mobile-menu-wrapper">
+<a href="#" id="pull" class="toggle-mobile-menu">目录/目次</a>
+<ul id="menu-menulayout-1" class="menu clearfix"><li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-31314"></li>
+  <li id="menu-item-31314" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-31314"><a href="https://poonh.github.io/index.html">網站簡介</a></li>
+ <li id="menu-item-31315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31315"><a href="grandparents.html">外公外婆的故事</a></li>
+ <li id="menu-item-31315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31315"><a href="picture.html">老照片</a></li>
+
+    
+</ul>
+</nav>
+<!--
             <div class="mobile-menu">
                 <div class="menu-icon"></div>
                 <ul class="mobile-menu-list">
@@ -26,6 +45,7 @@
                 </ul>
             </div>
         </div>
+-->
     </header>
 
     <main>
