--- a/index_test.html
+++ b/index_test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>外公外婆紀念網站</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="2f422.css">
+
     <style>
         /* Add your custom styles here */
         .mobile-menu {
@@ -25,11 +25,14 @@
             top: 0;
             left: 0;
             height: 100%;
-            width: 80%; /* Adjust width as needed */
+            width: 60%; /* Adjust width as needed */
             background-color: #fff; /* Adjust as needed */
             padding: 20px;
             border-right: 1px solid #ccc; /* Adjust as needed */
             z-index: 1000; /* Ensure it's above other content */
+            /* Changes to display items vertically */
+            display: flex;
+            flex-direction: column;
         }
 
         .mobile-menu-list.active {
