--- a/index_test.html
+++ b/index_test.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>外公外婆紀念網站</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="stylesheet" type="text/css" href="style_m.css">
+    <link rel="stylesheet" type="text/css" href="2f422.css">
     <style>
         /* Add your custom styles here */
         .mobile-menu {
@@ -30,8 +30,6 @@
             padding: 20px;
             border-right: 1px solid #ccc; /* Adjust as needed */
             z-index: 1000; /* Ensure it's above other content */
-            /* Changes to display items vertically */
-            display: flex;
             flex-direction: column;
         }
 
