--- a/index_test.html
+++ b/index_test.html
@@ -79,12 +79,12 @@
 
     <script>
         function toggleMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu-list');
+            var menuList = document.querySelector('.mobile-menu .mobile-menu-list');
             menuList.classList.toggle('active');
         }
 
         function hideMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu-list');
+            var menuList = document.querySelector('.mobile-menu .mobile-menu-list');
             menuList.classList.remove('active');
         }
     </script>
