--- a/index_test.html
+++ b/index_test.html
@@ -19,7 +19,7 @@
             cursor: pointer;
         }
 
-        .mobile-menu .mobile-menu-list {
+        .mobile-menu-list {
             display: none;
             position: fixed;
             top: 0;
@@ -79,12 +79,12 @@
 
     <script>
         function toggleMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu .mobile-menu-list');
+            var menuList = document.querySelector('.mobile-menu-list');
             menuList.classList.toggle('active');
         }
 
         function hideMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu .mobile-menu-list');
+            var menuList = document.querySelector('.mobile-menu-list');
             menuList.classList.remove('active');
         }
     </script>
