--- a/index_test.html
+++ b/index_test.html
@@ -61,13 +61,12 @@
         margin-right: 10px;
     }
 
-  .menu-title {
-        order: 1; /* Moves 目錄 to the far left */
+    .menu-title {
+        order: 0; /* Set the default order */
         margin-left: 10px; /* Adjust margin as needed */
     }
 
     .menu-icon {
-        order: 2; /* Moves the three bars to the far right */
         margin-right: 10px; /* Adjust margin as needed */
         cursor: pointer;
     }
