--- a/index_test.html
+++ b/index_test.html
@@ -61,12 +61,13 @@
         margin-right: 10px;
     }
 
-    .menu-title {
-        order: 0; /* Set the default order */
+   .menu-title {
+        order: -1; /* Moves 目錄 to the far left */
         margin-left: 10px; /* Adjust margin as needed */
     }
 
     .menu-icon {
+        order: 1; /* Moves the three bars to the far right */
         margin-right: 10px; /* Adjust margin as needed */
         cursor: pointer;
     }
