--- a/index_test.html
+++ b/index_test.html
@@ -62,12 +62,12 @@
     }
 
     .menu-title {
-        margin-right: auto; /* Pushes 目錄 to the far left */
+        margin-right: 5px/*auto*/; /* Pushes 目錄 to the far left */
         margin-left: 10px; /* Adjust margin as needed */
     }
 
     .menu-icon {
-        margin-left: 10px; /* Adjust margin as needed */
+        margin-left: 5px; /* Adjust margin as needed */
         cursor: pointer;
     }
 }
