--- a/index_test.html
+++ b/index_test.html
@@ -62,12 +62,14 @@
     }
 
     .menu-title {
-        margin-right: 5px/*auto*/; /* Pushes 目錄 to the far left */
-        margin-left: 10px; /* Adjust margin as needed */
+        /*margin-right: 5px;*/ /* Pushes 目錄 to the far left */
+        /*margin-left: 10px; *//* Adjust margin as needed */
+        align-items: left;
     }
 
     .menu-icon {
-        margin-left: 5px; /* Adjust margin as needed */
+        /*margin-left: 5px;*/ /* Adjust margin as needed */
+        align-items: right;
         cursor: pointer;
     }
 }
