--- a/index_test.html
+++ b/index_test.html
@@ -61,15 +61,13 @@
         margin-right: 10px;
     }
 
-    .menu-title {
-        /*margin-right: 5px;*/ /* Pushes 目錄 to the far left */
-        /*margin-left: 10px; *//* Adjust margin as needed */
-        align-items: left;
+     .menu-title {
+        margin-right: auto; /* Pushes 目錄 to the far left */
+        margin-left: 10px; /* Adjust margin as needed */
     }
 
     .menu-icon {
-        /*margin-left: 5px;*/ /* Adjust margin as needed */
-        align-items: right;
+        margin-left: 50px; /* Adjust margin as needed */
         cursor: pointer;
     }
 }
