--- a/index_test.html
+++ b/index_test.html
@@ -63,11 +63,13 @@
 
      .menu-title {
         margin-right: auto; /* Pushes 目錄 to the far left */
-        margin-left: 10px; /* Adjust margin as needed */
+        margin-left: 5px; /* Adjust margin as needed */
     }
 
     .menu-icon {
-        margin-left: 200px; /* Adjust margin as needed */
+        /*margin-left: 200px; */
+        margin-right: 5px; 
+
         cursor: pointer;
     }
 }
