--- a/index_test.html
+++ b/index_test.html
@@ -67,8 +67,8 @@
     }
 
     .menu-icon {
-        /*margin-left: 200px; */
-        margin-right: 5px; 
+        margin-left: auto;   /*300px*/
+
 
         cursor: pointer;
     }
