--- a/index_m.html
+++ b/index_m.html
@@ -10,7 +10,7 @@
         /* Add your custom styles here */
 
         .menu-icon {
-            display: inline-block;
+            display: none;
             cursor: pointer;
         }
 
@@ -32,9 +32,48 @@
             display: block;
         }
 
+        .mobile-menu {
+            display: none;
+        }
+
+        .menu-title {
+            margin-left: 10px; /* Adjust margin as needed */
+        }
+
+        .menu-icon {
+            margin-right: 10px; /* Adjust margin as needed */
+            cursor: pointer;
+        }
+
         .mobile-menu-list li {
             display: block; /* Display list items vertically */
         }
+
+   @media only screen and (max-width: 768px) {
+    .menu-icon {
+        display: inline-block;
+    }
+
+    .mobile-menu {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-right: 10px;
+    }
+
+     .menu-title {
+        margin-right: auto; /* Pushes 目錄 to the far left */
+        margin-left: 5px; /* Adjust margin as needed */
+    }
+
+    .menu-icon {
+        margin-left: 300px
+
+
+        cursor: pointer;
+    }
+}
+
     </style>
 </head>
 
@@ -51,7 +90,7 @@
             </nav>
 
             <div class="mobile-menu">
-                <div class="menu-icon">Menu</div>
+                <div class="menu-title">目錄</div>
                 <div class="menu-icon" onclick="toggleMobileMenu()">&#9776;</div> <!-- Three horizontal lines -->
                 <!-- Move the ul.mobile-menu-list inside the .mobile-menu div -->
                 <ul class="mobile-menu-list">
