--- a/index_test.html
+++ b/index_test.html
@@ -61,15 +61,14 @@
         margin-right: 10px;
     }
 
-     .menu-title {
+    .menu-title {
         margin-right: auto; /* Pushes 目錄 to the far left */
         margin-left: 10px; /* Adjust margin as needed */
     }
 
     .menu-icon {
-        margin-left: auto;
-
-
+        margin-left: auto; /* Pushes the three bars to the far right */
+        margin-right: 10px; /* Adjust margin as needed */
         cursor: pointer;
     }
 }
