--- a/index_test.html
+++ b/index_test.html
@@ -8,46 +8,41 @@
 
     <style>
         /* Add your custom styles here */
+    .menu-icon {
+        display: none;
+        cursor: pointer;
+    }
 
-        .menu-icon {
-            display: none;
-            cursor: pointer;
-        }
+    .mobile-menu-list {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 60%; /* Adjust width as needed */
+        background-color: #fff; /* Adjust as needed */
+        padding: 20px;
+        border-right: 1px solid #ccc; /* Adjust as needed */
+        z-index: 1000; /* Ensure it's above other content */
+        flex-direction: column; /* Display items vertically */
+    }
 
-        .mobile-menu-list {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 60%; /* Adjust width as needed */
-            background-color: #fff; /* Adjust as needed */
-            padding: 20px;
-            border-right: 1px solid #ccc; /* Adjust as needed */
-            z-index: 1000; /* Ensure it's above other content */
-            flex-direction: column; /* Display items vertically */
-        }
+    .mobile-menu-list.active {
+        display: block;
+    }
 
-        .mobile-menu-list.active {
-            display: block;
-        }
+    .mobile-menu {
+        display: none;
+    }
 
-        .mobile-menu {
-            display: none;
-        }
+    .menu-title {
+        margin-left: 10px; /* Adjust margin as needed */
+    }
 
-        .menu-title {
-            margin-left: 10px; /* Adjust margin as needed */
-        }
-
-        .menu-icon {
-            margin-right: 10px; /* Adjust margin as needed */
-            cursor: pointer;
-        }
-
-        .mobile-menu-list li {
-            display: block; /* Display list items vertically */
-        }
+    .menu-icon {
+        margin-right: 10px; /* Adjust margin as needed */
+        cursor: pointer;
+    }
 
    @media only screen and (max-width: 768px) {
     .menu-icon {
@@ -61,17 +56,18 @@
         margin-right: 10px;
     }
 
-    .menu-title {
+    .mobile-menu .menu-title {
         margin-right: auto; /* Pushes 目錄 to the far left */
         margin-left: 10px; /* Adjust margin as needed */
     }
 
-    .menu-icon {
+    .mobile-menu .menu-icon {
         margin-left: auto; /* Pushes the three bars to the far right */
         margin-right: 10px; /* Adjust margin as needed */
         cursor: pointer;
     }
 }
+
 
     </style>
 </head>
