--- a/index_test.html
+++ b/index_test.html
@@ -40,11 +40,12 @@
             margin-left: 10px; /* Adjust margin as needed */
         }
 
-        .menu-icon {
-            margin-right: 10px; /* Adjust margin as needed */
-            cursor: pointer;
-        }
-
+      .menu-icon {
+        display: inline-block;
+        margin-left: auto; /* Pushes the three bars to the far right */
+        margin-right: 10px; /* Adjust margin as needed */
+        cursor: pointer;
+    }
         .mobile-menu-list li {
             display: block; /* Display list items vertically */
         }
