--- a/index_test.html
+++ b/index_test.html
@@ -68,9 +68,9 @@
     }
 
     .menu-icon {
-        margin-left: 250px
-
-
+        display: inline-block;
+        margin-left: auto; /* Pushes the three bars to the far right */
+        margin-right: 10px; /* Adjust margin as needed */
         cursor: pointer;
     }
 }
