--- a/index_test.html
+++ b/index_test.html
@@ -42,7 +42,7 @@
 
       .menu-icon {
         display: inline-block;
-        margin-left: auto; /* Pushes the three bars to the far right */
+        margin-left: 50px; /* Pushes the three bars to the far right */
         margin-right: 10px; /* Adjust margin as needed */
         cursor: pointer;
     }
