--- a/index_test.html
+++ b/index_test.html
@@ -46,17 +46,34 @@
         }
 
         .mobile-menu-list li {
-            display: block; /* Display list items vertically */
+            display: block; /* Display list items vertically */a
         }
 
-        @media only screen and (max-width: 768px) {
-            .menu-icon {
-                display: inline-block;
-                margin-left: auto; /* Pushes the three bars to the far right */
-                margin-right: 10px; /* Adjust margin as needed */
-                cursor: pointer;
-            }
-        }
+   @media only screen and (max-width: 768px) {
+    .menu-icon {
+        display: inline-block;
+    }
+
+    .mobile-menu {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-right: 10px;
+    }
+
+     .menu-title {
+        margin-right: auto; /* Pushes 目錄 to the far left */
+        margin-left: 10px; /* Adjust margin as needed */
+    }
+
+    .menu-icon {
+        margin-left: 250px
+
+
+        cursor: pointer;
+    }
+}
+
     </style>
 </head>
 
