--- a/index_m.html
+++ b/index_m.html
@@ -46,7 +46,7 @@
         }
 
         .mobile-menu-list li {
-            display: block; /* Display list items vertically */
+            display: block; /* Display list items vertically */a
         }
 
    @media only screen and (max-width: 768px) {
