--- a/index_test.html
+++ b/index_test.html
@@ -34,20 +34,24 @@
         }
 
         .mobile-menu {
-            display: none;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-right: 10px;
         }
 
         .menu-title {
+            margin-right: auto; /* Pushes 目錄 to the far left */
             margin-left: 10px; /* Adjust margin as needed */
         }
 
         .menu-icon {
-            margin-right: 10px; /* Adjust margin as needed */
+            margin-left: 10px; /* Adjust margin as needed */
             cursor: pointer;
         }
 
         .mobile-menu-list li {
-            display: block; /* Display list items vertically */a
+            display: block; /* Display list items vertically */
         }
 
         @media only screen and (max-width: 768px) {
@@ -55,20 +59,8 @@
                 display: inline-block;
             }
 
-            .mobile-menu {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                margin-right: 10px;
-            }
-
-            .menu-title {
-                margin-right: auto; /* Pushes 目錄 to the far left */
-                margin-left: 10px; /* Adjust margin as needed */
-            }
-
             .menu-icon {
-                margin-left: 250px;
+                margin-left: 10px;
                 cursor: pointer;
             }
         }
@@ -91,13 +83,13 @@
         <div class="mobile-menu">
             <div class="menu-title">目錄</div>
             <div class="menu-icon" onclick="toggleMobileMenu()">&#9776;</div> <!-- Three horizontal lines -->
-            <!-- Move the ul.mobile-menu-list inside the .mobile-menu div -->
-            <ul class="mobile-menu-list">
-                <li><a href="https://poonh.github.io/grandparents/index.html" onclick="hideMobileMenu()">網站簡介</a></li>
-                <li><a href="grandparents.html" onclick="hideMobileMenu()">外公外婆的故事</a></li>
-                <li><a href="picture.html" onclick="hideMobileMenu()">老照片</a></li>
-            </ul>
         </div>
+        <!-- Move the ul.mobile-menu-list outside the .mobile-menu div -->
+        <ul class="mobile-menu-list">
+            <li><a href="https://poonh.github.io/grandparents/index.html" onclick="hideMobileMenu()">網站簡介</a></li>
+            <li><a href="grandparents.html" onclick="hideMobileMenu()">外公外婆的故事</a></li>
+            <li><a href="picture.html" onclick="hideMobileMenu()">老照片</a></li>
+        </ul>
     </div>
 </header>
 
@@ -122,4 +114,9 @@
     }
 
     function hideMobileMenu() {
-        var
+        var menuList = document.querySelector('.mobile-menu-list');
+        menuList.classList.remove('active');
+    }
+</script>
+</body>
+</html>
