--- a/index_m.html
+++ b/index_m.html
@@ -26,6 +26,7 @@
             border-right: 1px solid #ccc; /* Adjust as needed */
             z-index: 1000; /* Ensure it's above other content */
             flex-direction: column; /* Display items vertically */
+            transition: width 2s;
         }
 
         .mobile-menu-list.active {
