--- a/picture_test.html
+++ b/picture_test.html
@@ -353,5 +353,16 @@
             menuList.classList.remove('active');
         }
     </script>
+    <script>
+        function toggleMobileMenu() {
+            var menuList = document.querySelector('.mobile-menu-list');
+            menuList.classList.toggle('active');
+        }
+
+        function hideMobileMenu() {
+            var menuList = document.querySelector('.mobile-menu-list');
+            menuList.classList.remove('active');
+        }
+    </script>
 </body>
 </html>
