--- a/picture_test.html
+++ b/picture_test.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>外公外婆紀念網站</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="image.css">
 
-    <style>
-        /* Add your custom styles here */
+<style>
+  /* Additional CSS for enlarged images */
   .enlarged-image {
     display: none;
     position: fixed;
@@ -26,101 +27,32 @@
     margin: auto;
     margin-top: 5%;
   }
-        .menu-icon {
-            display: none;
-            cursor: pointer;
-        }
-
-        .mobile-menu-list {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 60%; /* Adjust width as needed */
-            background-color: #fff; /* Adjust as needed */
-            padding: 20px;
-            border-right: 1px solid #ccc; /* Adjust as needed */
-            z-index: 1000; /* Ensure it's above other content */
-            flex-direction: column; /* Display items vertically */
-            transition: width 2s;
-        }
-
-        .mobile-menu-list.active {
-            display: block;
-        }
-
-        .mobile-menu {
-            display: none;
-        }
-
-        .menu-title {
-            margin-left: 10px; /* Adjust margin as needed */
-        }
-
-        .menu-icon {
-            margin-right: 10px; /* Adjust margin as needed */
-            cursor: pointer;
-        }
-
-        .mobile-menu-list li {
-            display: block; /* Display list items vertically */a
-        }
-
-   @media only screen and (max-width: 768px) {
-    .menu-icon {
-        display: inline-block;
-    }
-
-    .mobile-menu {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-right: 10px;
-    }
-
-     .menu-title {
-        margin-right: auto; /* Pushes 目錄 to the far left */
-        margin-left: 10px; /* Adjust margin as needed */
-    }
-
-    .menu-icon {
-        margin-left: 250px
-
-
-        cursor: pointer;
-    }
-}
-
-    </style>
+</style>
 </head>
-
 <body>
     <header>
         <div class="container">
             <!-- Removed the logo div -->
             <nav>
                 <ul class="menu">
-                    <li><a href="https://poonh.github.io/grandparents/index.html">網站簡介</a></li>
-                    <li><a href="grandparents.html">外公外婆的故事</a></li>
-                    <li><a href="picture.html">老照片</a></li>
+                   <li><a href="https://poonh.github.io/grandparents/index.html">網站簡介</a></li>
+                   <li><a href="grandparents.html">外公外婆的故事</a></li>
+	           <li><a href="picture.html">老照片</a></li>
                 </ul>
             </nav>
-
             <div class="mobile-menu">
-                <div class="menu-title">目錄</div>
-                <div class="menu-icon" onclick="toggleMobileMenu()">&#9776;</div> <!-- Three horizontal lines -->
-                <!-- Move the ul.mobile-menu-list inside the .mobile-menu div -->
+                <div class="menu-icon"></div>
                 <ul class="mobile-menu-list">
-                    <li><a href="https://poonh.github.io/grandparents/index.html" onclick="hideMobileMenu()">網站簡介</a></li>
-                    <li><a href="grandparents.html" onclick="hideMobileMenu()">外公外婆的故事</a></li>
-                    <li><a href="picture.html" onclick="hideMobileMenu()">老照片</a></li>
+                   <li><a href="https://poonh.github.io/grandparents/index.html">網站簡介</a></li>
+                   <li><a href="grandparents.html">外公外婆的故事</a></li>
+	           <li><a href="picture.html">老照片</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
     <main>
+
         <!-- Your content goes here -->
      <h1>老照片</h1>
 
@@ -336,33 +268,13 @@
       document.getElementById('enlargedContainer').style.display = 'none';
     }
   </script>
+
+   
+	
     </main>
 
     <footer>
         <!-- Removed the footer content -->
     </footer>
-
-    <script>
-        function toggleMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu-list');
-            menuList.classList.toggle('active');
-        }
-
-        function hideMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu-list');
-            menuList.classList.remove('active');
-        }
-    </script>
-    <script>
-        function toggleMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu-list');
-            menuList.classList.toggle('active');
-        }
-
-        function hideMobileMenu() {
-            var menuList = document.querySelector('.mobile-menu-list');
-            menuList.classList.remove('active');
-        }
-    </script>
 </body>
 </html>
