--- a/picture_test.html
+++ b/picture_test.html
@@ -102,17 +102,20 @@
             <!-- Removed the logo div -->
             <nav>
                 <ul class="menu">
-                   <li><a href="https://poonh.github.io/grandparents/index.html">網站簡介</a></li>
-                   <li><a href="grandparents.html">外公外婆的故事</a></li>
-	           <li><a href="picture.html">老照片</a></li>
+                    <li><a href="https://poonh.github.io/grandparents/index.html">網站簡介</a></li>
+                    <li><a href="grandparents.html">外公外婆的故事</a></li>
+                    <li><a href="picture.html">老照片</a></li>
                 </ul>
             </nav>
+
             <div class="mobile-menu">
-                <div class="menu-icon"></div>
+                <div class="menu-title">目錄</div>
+                <div class="menu-icon" onclick="toggleMobileMenu()">&#9776;</div> <!-- Three horizontal lines -->
+                <!-- Move the ul.mobile-menu-list inside the .mobile-menu div -->
                 <ul class="mobile-menu-list">
-                   <li><a href="https://poonh.github.io/grandparents/index.html">網站簡介</a></li>
-                   <li><a href="grandparents.html">外公外婆的故事</a></li>
-	           <li><a href="picture.html">老照片</a></li>
+                    <li><a href="https://poonh.github.io/grandparents/index.html" onclick="hideMobileMenu()">網站簡介</a></li>
+                    <li><a href="grandparents.html" onclick="hideMobileMenu()">外公外婆的故事</a></li>
+                    <li><a href="picture.html" onclick="hideMobileMenu()">老照片</a></li>
                 </ul>
             </div>
         </div>
