--- a/picture_test.html
+++ b/picture_test.html
@@ -69,9 +69,11 @@
             display: block; /* Display list items vertically */a
         }
 
-   @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     .menu-icon {
         display: inline-block;
+        margin-left: 250px; /* Adjust as needed */
+        cursor: pointer;
     }
 
     .mobile-menu {
@@ -81,18 +83,11 @@
         margin-right: 10px;
     }
 
-     .menu-title {
+    .menu-title {
         margin-right: auto; /* Pushes 目錄 to the far left */
         margin-left: 10px; /* Adjust margin as needed */
     }
-
-    .menu-icon {
-        margin-left: 250px
-
-
-        cursor: pointer;
-    }
-   }
+}
 	
 </style>
 </head>
