--- a/index_test.html
+++ b/index_test.html
@@ -50,10 +50,11 @@
             display: block; /* Display list items vertically */a
         }
 
-  @media only screen and (max-width: 768px) {
+/*
+@media only screen and (max-width: 768px) {
     .menu-icon {
         display: inline-block;
-        margin-left: 280px; /* Adjust as needed */
+        margin-left: 280px; 
         cursor: pointer;
     }
 
@@ -65,10 +66,11 @@
     }
 
     .menu-title {
-        margin-right: auto; /* Pushes 目錄 to the far left */
-        margin-left: 10px; /* Adjust margin as needed */
+        margin-right: auto;  
     }
 }
+
+*/
     </style>
 </head>
 
