--- a/index_test.html
+++ b/index_test.html
@@ -60,12 +60,12 @@
         cursor: pointer;
     }
 
-    .mobile-menu {
+ /*   .mobile-menu {
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-right: 10px;
-    }
+    }*/
 
     .menu-title {
         margin-right: auto;  
