--- a/index_test.html
+++ b/index_test.html
@@ -54,22 +54,22 @@
 	
 
 @media only screen and (max-width: 768px) {
-    .menu-icon {
+/*    .menu-icon {
         display: inline-block;
         margin-left: 280px; 
         cursor: pointer;
     }
 
- /*   .mobile-menu {
+      .mobile-menu {
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-right: 10px;
     }*/
 
-    .menu-title {
+/*    .menu-title {
         margin-right: auto;  
-    }
+    }*/
 }
 
 
