--- a/index_test.html
+++ b/index_test.html
@@ -10,11 +10,11 @@
         /* Add your custom styles here */
 
 @media only screen and (max-width: 768px) {
-    .menu-icon {
+/*    .menu-icon {
         display: inline-block;
         margin-left: 280px; 
         cursor: pointer;
-    }
+    }*/
 
       .mobile-menu {
         display: flex;
@@ -23,9 +23,9 @@
         margin-right: 10px;
     }
 
-    .menu-title {
+/*    .menu-title {
         margin-right: auto;  
-    }
+    }*/
 }
 
 
