--- a/index_test.html
+++ b/index_test.html
@@ -4,31 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>外公外婆紀念網站</title>
-    <link rel="stylesheet" type="text/css" href="style_test.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <style>
         /* Add your custom styles here */
 
-@media only screen and (max-width: 768px) {
-/*    .menu-icon {
-        display: inline-block;
-        margin-left: 280px; 
-        cursor: pointer;
-    }*/
+        .menu-icon {
+            display: none;
+            cursor: pointer;
+        }
 
-      .mobile-menu {
+        .mobile-menu-list {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 60%; /* Adjust width as needed */
+            background-color: #fff; /* Adjust as needed */
+            padding: 20px;
+            border-right: 1px solid #ccc; /* Adjust as needed */
+            z-index: 1000; /* Ensure it's above other content */
+            flex-direction: column; /* Display items vertically */
+	    background-image: url('pictures/lightgreen.jpg')
+            transition: width 2s;
+        }
+
+        .mobile-menu-list.active {
+            display: block;
+        }
+
+        .mobile-menu {
+            display: none;
+        }
+
+        .menu-title {
+            margin-left: 10px; /* Adjust margin as needed */
+        }
+
+        .menu-icon {
+            margin-right: 10px; /* Adjust margin as needed */
+            cursor: pointer;
+        }
+
+        .mobile-menu-list li {
+            display: block; /* Display list items vertically */a
+        }
+
+  @media only screen and (max-width: 768px) {
+    .menu-icon {
+        display: inline-block;
+        margin-left: 280px; /* Adjust as needed */
+        cursor: pointer;
+    }
+
+    .mobile-menu {
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin-right: 10px;
     }
 
-/*    .menu-title {
-        margin-right: auto;  
-    }*/
+    .menu-title {
+        margin-right: auto; /* Pushes 目錄 to the far left */
+        margin-left: 10px; /* Adjust margin as needed */
+    }
 }
-
-
     </style>
 </head>
 
